# lang

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Changelog  Lexer.g  Parser.g4  README.md  act.sh  act.txt  f  gmon.out  grammar.g  make_tool.sh  te  test  x  x_x2
.antlr/: Lexer.interp  Lexer.java  Lexer.tokens
.github/workflows/: main.yml
antlr-arm/: libantlr4-runtime.so.4.9.2
bootstrap/parser/: token.x
cpp_bridge/: CMakeLists.txt  x.sh
cpp_bridge/src/: a.out  bridge.cpp
cpp_source/: CMakeLists.txt  f
cpp_source/src/: AllocHelper.cpp  AstCopier.h  Compiler.h  DebugHelper.cpp  Derive.cpp  DirCompiler.cpp  Resolver.h  Visitor.h
doc/: asd  assert  block-val  bug  delegate trait  deletgate trait  deref  enum_var_type  fmt  for  foreach  join  lang.drawio  macros  macros.txt  mc  move  move-loop  new 1.txt  str  throw.txt  todo
doc/llvm/: list  llvm-static
grammar/: Lexer.g  Lexer.g4  Parser.g  prec.txt
grammar/.antlr/: Lexer.interp  Lexer.java  Lexer.tokens
parser/: cache.x  compiler.x  lexer.x  main.x  parser.x
src/: AllocHelper.cpp  Ast.cpp  Ast.h  AstCopier.cpp  AstCopier.h  Ast_all.h  BaseVisitor.cpp  BaseVisitor.h  Compiler.cpp  Compiler.h  CompilerHelper.cpp  Converter.cpp  Converter.h  DebugHelper.cpp  DefaultVisitor.h  Derive.cpp  DirCompiler.cpp  ExprParser.cpp  ExprParser.h  IdGen.cpp  IdGen.h  Lexer.cpp  Lexer.h  Main.cpp  MethodResolver.cpp  MethodResolver.h  Ownership.cpp  Ownership.h  Parser.cpp  Parser.h  Resolver.cpp  Resolver.h  StatementParser.cpp  StatementParser.h  Token.h  Transformer.cpp  Transformer.h  TypeUtils.h  Util.cpp  Util.h  (+2 more)
src/ast/: ast.x  copier.x  lexer.x  parser.x  printer.x  token.x  utils.x
src/backend/: alloc_helper.x  bridge.x  compiler.x  compiler_helper.x  debug_helper.x  emitter.x  expr_emitter.x  llvm.x  stmt_emitter.x
src/backend_cpp/: bridge.x
src/bridge/: bridge.cpp  bridge.h
src/formatter/: main.x
src/lsp/: build.sh  find_usages.x  main.x
src/parser/: Ast.cpp  Ast.h  Ast_all.h  ExprParser.cpp  ExprParser.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  StatementParser.cpp  StatementParser.h  Token.cpp  Token.h  Util.cpp  Util.h  alloc_helper.x  ast.x  bridge.x  cache.x  compiler.x  compiler_helper.x  copier.x  debug_helper.x  derive.x  drop_helper.x  exit.x  expr_emitter.x  incremental.x  lexer.x  llvm.x  macros.x  main.x  method_resolver.x  own_helper.x  own_model.x  own_visitor.x  ownership.x  parser.x  printer.x  progress.x  (+5 more)
src/resolver/: derive.x  drop_helper.x  exit.x  method_resolver.x  progress.x  resolver.x
src/std/: any.x  box.x  deque.x  fs.x  hashmap.x  hashset.x  io.x  it.x  libc.x  list.x  llist.x  map.x  ops.x  option.x  regex.x  result.x  set.x  slice.x  stack.x  str.x  string.x  th.x
src/tests/: tests.x
std/: io.x  list.x  result.x  rt.x  str.x
tests/: Array  Optional  a  array  arrow  b  enum  exprs  files  importTest  resolve  resolve1  resolveClass  shadow  stmts  string  types
tests/a/: a.x
tests/core/: Array  List  Map  Map.x  Optional  String  cmp  int  string
tests/imp2/: a.x  b.x  imp2.x
tests/importTest/: cls.x  imp.x
tests/incremental_test/: a.x  b.x  main.x
tests/normal/: 03-infix.x  04-self_test.x  04-structTest.x  05-base.x  05-enumTest.x  06-pass.x  07-ptr.x  08-float.x  08-load.x  09-array.x  10-ret.x  11-flow.x  12-as.x  14-generic.x  16-global.x  17-rvalue.x  18-alias.x  19-block.x  19-match.x  20-func_ptr.x  21-th.x  22-ns.x  23-lambda.x  24-constTest.x  25_tuple.x  26_module.x  alloc.x  array.x  array.x.bak  as.x  base.x  blk-val.x  bugx.x  dbg.x  dbg_base.x  float.x  flow.x  generic.x  global.x  global.x.bak  (+18 more)
tests/own/: 05ptr_member.x  07redo.x  0if_multi.x  1prm.x  (+28 more)
(+222 files in other folders)
